fixed BinarySearchTest